Fixed a spacing issue

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -516,7 +516,7 @@ button {
 }
 .section-3 p {
   color: #063A65;
-  padding: 50px 0;
+  padding: 10px 0 50px 0;
 }
 #quick-fix {
   padding-bottom: 0;
